--- a/frontend-persona/src/app/components/persona-add/persona-add.component.html
+++ b/frontend-persona/src/app/components/persona-add/persona-add.component.html
@@ -2,13 +2,13 @@
 
 <form (ngSubmit)="addPersona()">
   <label for="nome">Nome:</label>
-  <input [(ngModel)]="persona.nome" name="nome" id="nome" required />
+  <input [(ngModel)]="persona.nome" name="nome" id="nome" required /><br><br>
 
   <label for="cognome">Cognome:</label>
-  <input [(ngModel)]="persona.cognome" name="cognome" id="cognome" required />
+  <input [(ngModel)]="persona.cognome" name="cognome" id="cognome" required /><br><br>
 
   <label for="eta">Età:</label>
-  <input [(ngModel)]="persona.eta" name="eta" id="eta" type="number" required />
+  <input [(ngModel)]="persona.eta" name="eta" id="eta" type="number" required /><br><br>
 
   <button type="submit">Aggiungi</button>
 </form>
